--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,4 @@
----
+-r--
 type: page
 title: About
 date: 2021-03-19
@@ -6,7 +6,7 @@ date: 2021-03-19
 
 # Safaa Hansen
 
-Hey, I'm Safaa.
+<img src="https://user-images.githubusercontent.com/6674697/135581487-a14c65af-cde9-425d-a3dd-1e2183ed4a4d.jpeg" width="400px"/>
 
 ---
 
